--- a/.github/workflows/ultroid.yml
+++ b/.github/workflows/ultroid.yml
@@ -29,7 +29,7 @@ jobs:
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} ultroid
+           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} projectfizilion
        - name: Running Ultroid
          timeout-minutes: 350
          continue-on-error: true
