--- a/.github/workflows/ultroid.yml
+++ b/.github/workflows/ultroid.yml
@@ -30,7 +30,7 @@ jobs:
          continue-on-error: true
          run: |
            git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} projectfizilion
-       - name: Running Ultroid
+       - name: Running Forkzilion
          timeout-minutes: 350
          continue-on-error: true
          run: |
