--- a/.github/workflows/projectfizilion.yml
+++ b/.github/workflows/projectfizilion.yml
@@ -29,7 +29,7 @@ jobs:
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} projectfizilion
+           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} forkzilion
        - name: Running Forkzilion
          timeout-minutes: 350
          continue-on-error: true
