--- a/.github/workflows/forkzilion.yml
+++ b/.github/workflows/forkzilion.yml
@@ -22,14 +22,14 @@ jobs:
        - name: initialization
          continue-on-error: true
          run: |
-           git config --global user.name ${{ secrets.GitHubName }}
-           git config --global user.email ${{ secrets.GitHubMail }}
+           git config --global user.name ${{ secrets.GITHUBNAME }}
+           git config --global user.email ${{ secrets.GITHUBMAIL }}
            git config --global credential.helper store
-           echo "https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@github.com" > ~/.git-credentials
+           echo "https://${{ secrets.GITHUBNAME }}:${{ secrets.GH_TOKEN }}@github.com" > ~/.git-credentials
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} forkzilion
+           git clone https://${{ secrets.GITHUBNAME }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} forkzilion
        - name: Running Forkzilion
          timeout-minutes: 350
          continue-on-error: true
