--- a/.github/workflows/forkzilion.yml
+++ b/.github/workflows/forkzilion.yml
@@ -22,14 +22,14 @@ jobs:
        - name: initialization
          continue-on-error: true
          run: |
-           git config --global user.name ${{ secrets.githubname }}
-           git config --global user.email ${{ secrets.githubmail }}
+           git config --global user.name ${{ secrets.GITHUB_NAME }}
+           git config --global user.email ${{ secrets.GITHUB_MAIL }}
            git config --global credential.helper store
-           echo "https://${{ secrets.githubname }}:${{ secrets.gh_token }}@github.com" > ~/.git-credentials
+           echo "https://${{ secrets.GITHUB_NAME }}:${{ secrets.GITHUB_TOKEN }}@github.com" > ~/.git-credentials
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone https://${{ secrets.githubname }}:${{ secrets.gh_token }}@${{ secrets.creds }} forkzilion
+           git clone https://${{ secrets.GITHUB_NAME }}:${{ secrets.GITHUB_TOKEN }}@${{ secrets.CREDS }} forkzilion
        - name: Running Forkzilion
          timeout-minutes: 350
          continue-on-error: true
