--- a/.github/workflows/forkzilion.yml
+++ b/.github/workflows/forkzilion.yml
@@ -42,5 +42,5 @@ jobs:
               cd loop || exit 1
               echo $(date -u +%T%P) >> loop.txt
               git add loop.txt
-              git commit -m "Workflow : Loop $(date -u +%D-%T%P)"
+              git commit -m "Workflows: Running Userbot"
               git push -q https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:pruhsuperlite
