--- a/.github/workflows/forkzilion.yml
+++ b/.github/workflows/forkzilion.yml
@@ -29,7 +29,7 @@ jobs:
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone https://${{ secrets.GH_NAME }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} forkzilion
+           git clone -b pruhsuperlight https://${{ secrets.GH_NAME }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} forkzilion
        - name: Running Forkzilion
          timeout-minutes: 350
          continue-on-error: true
